--- a/exploded-archives/eGov.ear/eGov_war/layout/menu.xhtml
+++ b/exploded-archives/eGov.ear/eGov_war/layout/menu.xhtml
@@ -1,4 +1,4 @@
-<rich:toolbar
+<rich:toolbar 
     xmlns="http://www.w3.org/1999/xhtml"
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:h="http://java.sun.com/jsf/html"
@@ -6,26 +6,8 @@
     xmlns:s="http://jboss.org/schema/seam/taglib"
     xmlns:rich="http://richfaces.org/rich">
     <rich:toolbarGroup>
-        <h:outputText value="#{projectName}:"/>
-        <s:link id="menuHomeId" view="/home.xhtml" value="Home" propagation="none"/>
+        <s:link id="menuHomeId" view="/home.xhtml" value="#{projectName}" propagation="none"/>
     </rich:toolbarGroup>
-    <rich:dropDownMenu showDelay="250" hideDelay="0" submitMode="none">
-        <f:facet name="label">Browse data</f:facet>
-	<rich:menuItem>
-    	<s:link view="/TentativaList.xhtml"
-           	value="Tentativa List"
-           	id="TentativaId"
-			includePageParams="false"
-     		propagation="none"/>
-     </rich:menuItem>
-	<rich:menuItem>
-    	<s:link view="/CitizenList.xhtml"
-           	value="Citizen List"
-           	id="CitizenId"
-			includePageParams="false"
-     		propagation="none"/>
-     </rich:menuItem>
-    </rich:dropDownMenu>
     <!-- @newMenuItem@ -->
     <rich:toolbarGroup location="right">
         <h:outputText id="menuWelcomeId" value="signed in as: #{credentials.username}" rendered="#{identity.loggedIn}"/>
