--- a/exploded-archives/eGov.ear/eGov_war/layout/template.xhtml
+++ b/exploded-archives/eGov.ear/eGov_war/layout/template.xhtml
@@ -18,7 +18,7 @@
    </h:head>
    <h:body>
    		<center>
-			<div style="width: 950px; height: 650px; vertical-align: center;">
+			<div style="width: 950px; height: 650px; vertical-align: center; background-color: #EEEEEE">
 		      <ui:include src="menu.xhtml">
 		         <ui:param name="projectName" value="eGov"/>
 		      </ui:include>
